<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="app_name">WakeMeSki</string>
	 <!-- Preference related strings-->
	<string name="resort_monitor_description">Select Ski Resorts to Monitor</string>
	<string name="main_prefs">Settings Page</string>
	<string name="resort_monitor_title">Resorts</string>
	<string name="enabled_check_title">Enabled</string>
	<string name="choose_resorts">Choose Resorts</string>
	<string name="wake_me_up_when">When me up when at least 1 selected resort reports greater than</string>
	<string name="past_24_hours">of snow in the past 24 hours</string>
	<string name="alarm_summary">Configure your wake-up settings</string>
	<string name="alarm_settings_title">Alarm Settings</string>
	<string name="count_alarms_enabled"><xliff:g id="count">%d</xliff:g> alarms enabled</string>
	<string name="enable">Enable</string>
	<string name="enabled">Enabled</string>
	<string name="enable_wakeup">Enable wake-up</string>
	<string name="wakeup_time">Wake-up Time</string>
	<string name="snow_settings">Snow Settings</string>
	<string name="snow_wakeup_settings_detail">Snow Totals Required For Wake-up</string>
	<string name="wake_on">Wake after</string>
	<string name="wake_overnight">or more in 24 hours</string>
	<string name="set_preferences">Set Preferences</string>
	<string name="wakeup_settings">Wakeup Settings</string>
	<string name="alert_settings">Alert Settings</string>
	<string name="alert_summary">Configure alerts on snow forecast updates</string>
	<string name="enable_alert_notify">Enable snow alert status bar notifications</string>
	<string name="snow_alert_settings_detail">Snow totals for snow alerts</string>
	<string name="alert_when">Add snow alert when</string>
	<string name="is_forecasted_for_resort">of snow or more is forecasted for a selected resort.</string>
	<string name="notify_me_when_snow_settings">Notify me when a snow forecast for a resort indicates</string>
	<string name="notify_fresh_snow_predicted">or more of fresh snow predicted</string>
	<string name="send_logs">Send Log Files</string>
	<string name="send_logs_to_developers">Send log files to developers to help debug issues.</string>
	<string name="log_file_not_available_insert_sdcard">Log file not available.  Please insert SDCard or unplug USB cable from computer</string>
	<string name="send_mail">Send Mail...</string>
	<string name="please_enable_wakeup_on_resort">Please enable wake-up for at least one resort in the Resorts page to finish alarm configuration.</string>
 	 <!-- Unsorted strings-->
	<string name="none">None</string>
	<string name="alert_title">Alarm</string>
	<string name="alarm_alert_snooze_text">Snooze</string>
	<string name="alarm_alert_dismiss_text">Dismiss</string>
	<string name="alarm_alert_alert_silenced">Alarm silenced after <xliff:g id="minutes">%d</xliff:g> minutes</string>
	<string name="alarm_alert_snooze_set">Snoozing for <xliff:g id="minutes">%d</xliff:g> minutes.</string>
	<string name="resort_snow_detail">Resort snow detail:</string>
	<string name="does_not_exceed_wakeup_value">Does not exceed wakeup value</string>
	<string name="exceeds_wakeup_value">Exceeds wakeup value</string>
	<string name="my_report">My Report</string>
	<string name="show_report_summary">Check status for selected resorts</string>
	<string name="please_wait_for_service">Please wait while snow status is obtained for selected resorts.</string>
	<string name="alarm_updated">WakeMeSki alarm successfully updated</string>
	<string name="wakeup_disabled">WakeMeSki wake-up is currently disabled</string>
	<string name="alarm_not_set">Please configure alarm to enable wakeup</string>
	<string name="resort_list_title">WakeMeSki Selected Resorts</string>
	<string name="wakeup">Wake Up</string>
	<string name="resort_title">Resort</string>
	<string name="resort_name">Resort Name</string>
	<string name="show_alerts">Alerts</string>
	<string name="wakemeski_report">WakeMeSki Report</string>
	<string name="fresh_snow">New Snow</string>
    <string name="selection_activity">Mountain Selection</string>
    <string name="selection_activity_loading">Mountain Selection - Loading...</string>
    
    <string name="add_location">Add Location</string>
    <string name="remove_location">Remove Location</string>
	<string name="clear_locations">Clear All</string>
	<string name="refresh">Refresh</string>

	<string name="map_location">Map it</string>

	<string name="fresh_not_available">Not Available</string>
	<string name="report_error_working_on_it">The report for this resort is not currently available.  We are working on the problem and hope to resolve soon.  Thank you for your patience.</string>
	<string name="report_error_localized_detail">An error occurred while attempting to retrieve the report for this resort: %s</string>
	<string name="error_title">Error Finding Location Data</string>
	<string name="error_no_connection">No data connection. Please try again later.</string>
	
	<!-- ReportActivity (report.xml) strings -->
	<string name="report_date">Date: %s</string>
	<string name="report_snow">Snowfall</string>
	<string name="report_base">Base Depths: %s</string>
	<string name="report_trails_lifts">Trails: <xliff:g id="trails">%s</xliff:g> Lifts: <xliff:g id="lifts">%s</xliff:g> minutes.</string>
	<string name="alert">Wake-up Tone</string>
	<string name="ok">OK</string>
	<string name="wakeup_value">Wakeup Value:</string>
	<string name="report_weather">Forecast</string>
	<string name="report_weather_link">Weather Details</string>
	<string name="report_details_link">Report Info</string>
	<string name="report_info_link">Resort Info</string>
	<string name="report_mapit_link">Map It</string>
	<string name="report_comments_header">Comments</string>
	<!-- Upgrade dialog strings -->
	<string name="please_upgrade">Please Upgrade</string>
	<string name="no_longer_supported">This application version is no longer supported.</string>
	<string name="out_of_date_dialog_body">An updated version of WakeMeSki is available.</string>
	<string name="update_button">Update</string>
	<string name="quit_button">Exit</string>
	<string name="ignore_button">Ignore</string>
	<string name="eula_title">License Agreement</string>
    <string name="eula_accept">Accept</string>
    <string name="eula_refuse">Don\'t Accept</string>
    <!-- Alarm dialog strings -->
    <string name="ski_wake_up">WakeMeSki Wake Up!</string>
    <string name="alarm_screen_title">WakeMeSki Alarms</string>
    <!-- Service notification strings -->
    <string name="wakemeski_update">WakeMeSki update</string>
    <string name="checking_notify_text">Checking snow totals</string>
    
    <!-- Snow alert strings -->
    <string name="alert_share">Share</string>
    <string name="alert_share_intent">Share snow alert using</string>
    <string name="alert_share_subject">WakeMeSki Snow Alert for <xliff:g id="resort">%s</xliff:g></string>
    <string name="alert_share_heading">Snow has been forecasted at <xliff:g id="resort">%s</xliff:g>!</string>
    <string name="ticker_title">Snow alert</string>
    <string name="ticker_msg">Snow alert for %s</string>
    <string name="ticker_msg_multi">%d snow alerts found</string>
	<string name="show_report">Show Report</string>
	<string name="configure_notifications">Configure Notifications</string>
</resources>
