<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 Dan Walkes - All Rights Reserved-->
<LinearLayout 
xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_height="fill_parent"
android:layout_width="fill_parent">
  <!--  Add a View which the user can
  	press to add a resort (in case they don't think to try the menu key -->
<Button
	android:id="@+id/press_to_add_resort"
	android:text="@string/add_location"
	android:layout_height="50dip"
	android:layout_width="fill_parent"
	android:textStyle="bold"
	android:gravity="center" />    
	<RelativeLayout
	android:orientation="horizontal"
	android:layout_height="wrap_content"
	android:layout_width="fill_parent">

		<LinearLayout
		android:orientation="vertical"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:gravity="center"
		android:paddingRight="5dip"
		android:layout_alignParentRight="true"
		android:id="@+id/wakeup_txt">
			<TextView
			android:layout_height="fill_parent"
			android:layout_width="wrap_content"
			android:text="@string/enable"
			android:textSize="15sp"
			android:textStyle="bold">
			</TextView>
			<TextView
			android:layout_height="fill_parent"
			android:layout_width="wrap_content"
			android:text="@string/wakeup"
			android:textSize="15sp"
			android:textStyle="bold">
			</TextView>
		</LinearLayout>
		<TextView
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:text="@string/resort_name"
		android:textSize="15sp"
		android:textStyle="bold"
		android:layout_toLeftOf="@id/wakeup_txt"
		android:layout_alignBottom="@id/wakeup_txt"
		android:gravity="center">
		</TextView>
	</RelativeLayout>
	<ImageView
    	android:src="@drawable/line_white"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    ></ImageView>	

<ListView
  android:id="@android:id/list"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:drawSelectorOnTop="false"/>
</LinearLayout>
