<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 Dan Walkes - All Rights Reserved
-->
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
   	android:background="#ffC0C0C0">
<LinearLayout
	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	        <TextView
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:text="@string/wakemeski_report"
	        android:textColor="#FF000000"
	        android:textSize="25sp"
	        android:textStyle="bold"
	        android:gravity="center">
	        </TextView>
	<LinearLayout
	android:orientation="horizontal"
	android:layout_height="50dip"
	android:layout_width="fill_parent"
	>
	        <TextView
	        android:layout_height="fill_parent"
	        android:layout_width="wrap_content"
	        android:text="@string/resort_name"
	        android:layout_weight="70"
	        android:textColor="#FF000000"
	        android:textStyle="bold"
	        android:textSize="15sp"
	        android:gravity="center">
	        </TextView>
	        <TextView
	        android:layout_height="fill_parent"
	       	android:layout_width="wrap_content"
	        android:text="@string/fresh_snow"
	        android:layout_weight="30"
	        android:textColor="#FF000000"
	        android:textSize="15sp"
	        android:textStyle="bold"
	        android:gravity="center">
	        </TextView>
	</LinearLayout>
    <ImageView
    	android:src="@drawable/line"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"/>
	
	<ListView 
			android:id="@+id/dashboard_list"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"/>
</LinearLayout>
</LinearLayout>

